apps/infra/kube-prometheus-stack/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
