apps/infra/kube-prometheus-stack/resources/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: k3s-metrics-service
  labels:
    app.kubernetes.io/name: kubelet
  namespace: kube-system
spec:
  clusterIP: None
  ports:
  - name: https-metrics
    port: 10250
    protocol: TCP
    targetPort: 10250
  type: ClusterIP

---
apiVersion: v1
kind: Endpoints
metadata:
  name: k3s-metrics-service
  namespace: kube-system
subsets:
- addresses:
  - ip: 192.168.40.110
  - ip: 192.168.40.113
  - ip: 192.168.40.114
  ports:
  - name: https-metrics
    port: 10250
    protocol: TCP
