apps/infra/kube-prometheus-stack/resources/ingressroute.production.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:mHJXbP4TH2aWlfIoD8m6K8v1qRmmVlYPKjZ5Jv8=,iv:jRFG+s885k3Tede7uS+MNKwnzAarnLg2UC6gIKKjglQ=,tag:1UaGGdmw2FUrQ2npo2u2lw==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: grafana-production
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:0KZHDyN+Imn8/CUc4Mj5edeT0USUqixkKuurzHoz5clFn2MAw9sWjnwtMmxW,iv:FFXApzFq4je9LIYYfJpEh0UdvAjc9J8G0XlEFNKoyQI=,tag:SjJ4UsUwWR72vtH8mZatPA==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: kube-prometheus-stack-grafana
              namespace: monitoring
    tls:
        domains:
            - main: ENC[AES256_GCM,data:phe5b90UlY/rs5CU+dLB093oGsEOG7taWKM9sms=,iv:Pofqu6mGLvtL0jkY3LLDvxHmiYJHmN74DGN/8LLxV8c=,tag:aFUyueATTdsxkTDuor6R0w==,type:str]
              sans:
                - ENC[AES256_GCM,data:M4I4m2RE+MXVj142uQU/J5dyaUSxtWcqdtyuBx+z,iv:tU7tJCZMuPNpDZ1sOFI48eAdalbmRaei+EbyS0KTwAM=,tag:qlQrd6PbJA1A/6qjALRVAQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: grafana-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByQjFVSDBuM3VvdzZtbWZQ
[...]
            Dj602MJB1MakaWTnNzMoaEKtH9ATDif7cQ8cSERPqklrsN+Vxjiapg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-21T13:30:42Z"
    mac: ENC[AES256_GCM,data:itI1tKh24cG4GdO2nzZZqLRhYu+jDnLpF+8vu+hJhjPntOxJ3Lqo9aGt+OLRCdTrV16TFfpWz5rkoZHWwEj2BFPqSG06AwP6MKZDnVSP3Z8LrERuFl59EnlWwNazmYIsUSOJKLPQX6Twc+p7aR5mpFf9t1TGd5uYL32Xmrvflek=,iv:a8+T3jVQa12S6IUBZxaQvuqz895MWxS8iZdMphYgb74=,tag:43bX5t1UgygAiqszNPRJUw==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:19Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//cQMPtFSrqo9nLImp++VDQeVn2CtAHZ0kNrwCQs9Hhzbp
[...]
            =3d8p
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:mHJXbP4TH2aWlfIoD8m6K8v1qRmmVlYPKjZ5Jv8=,iv:jRFG+s885k3Tede7uS+MNKwnzAarnLg2UC6gIKKjglQ=,tag:1UaGGdmw2FUrQ2npo2u2lw==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: prometheus-production
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:99WmlACXPtnF3MiP+qd10ahvXazltKEhb2AXSBDjf6xPOi0YZDtBm+ckaS5J5dym,iv:fs43ollInFhNygwXpmVRq3ibFOzwPjF7GtZFwEWc394=,tag:LfkIBd9Ui8Ei7RtDtIPlUg==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: kube-prometheus-stack-prometheus
              namespace: monitoring
    tls:
        domains:
            - main: ENC[AES256_GCM,data:phe5b90UlY/rs5CU+dLB093oGsEOG7taWKM9sms=,iv:Pofqu6mGLvtL0jkY3LLDvxHmiYJHmN74DGN/8LLxV8c=,tag:aFUyueATTdsxkTDuor6R0w==,type:str]
              sans:
                - ENC[AES256_GCM,data:M4I4m2RE+MXVj142uQU/J5dyaUSxtWcqdtyuBx+z,iv:tU7tJCZMuPNpDZ1sOFI48eAdalbmRaei+EbyS0KTwAM=,tag:qlQrd6PbJA1A/6qjALRVAQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: prometheus-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByQjFVSDBuM3VvdzZtbWZQ
[...]
            Dj602MJB1MakaWTnNzMoaEKtH9ATDif7cQ8cSERPqklrsN+Vxjiapg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-21T13:30:42Z"
    mac: ENC[AES256_GCM,data:itI1tKh24cG4GdO2nzZZqLRhYu+jDnLpF+8vu+hJhjPntOxJ3Lqo9aGt+OLRCdTrV16TFfpWz5rkoZHWwEj2BFPqSG06AwP6MKZDnVSP3Z8LrERuFl59EnlWwNazmYIsUSOJKLPQX6Twc+p7aR5mpFf9t1TGd5uYL32Xmrvflek=,iv:a8+T3jVQa12S6IUBZxaQvuqz895MWxS8iZdMphYgb74=,tag:43bX5t1UgygAiqszNPRJUw==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:19Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//cQMPtFSrqo9nLImp++VDQeVn2CtAHZ0kNrwCQs9Hhzbp
[...]
            =3d8p
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:mHJXbP4TH2aWlfIoD8m6K8v1qRmmVlYPKjZ5Jv8=,iv:jRFG+s885k3Tede7uS+MNKwnzAarnLg2UC6gIKKjglQ=,tag:1UaGGdmw2FUrQ2npo2u2lw==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: alertmanager-production
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:oorjnVRgQKoAD0iFY9lLRUnldhSJT42841klggVyyNgz/9F0iaZaL1eXJ08BxN8emTI=,iv:Sd7vK6gDbnH08YsqnaxlOS5zoBhgLtGuwFwP5BlILj8=,tag:V2+oYPWoRYdfyI5oyiIwzA==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: kube-prometheus-stack-alertmanager
              namespace: monitoring
    tls:
        domains:
            - main: ENC[AES256_GCM,data:phe5b90UlY/rs5CU+dLB093oGsEOG7taWKM9sms=,iv:Pofqu6mGLvtL0jkY3LLDvxHmiYJHmN74DGN/8LLxV8c=,tag:aFUyueATTdsxkTDuor6R0w==,type:str]
              sans:
                - ENC[AES256_GCM,data:M4I4m2RE+MXVj142uQU/J5dyaUSxtWcqdtyuBx+z,iv:tU7tJCZMuPNpDZ1sOFI48eAdalbmRaei+EbyS0KTwAM=,tag:qlQrd6PbJA1A/6qjALRVAQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: alertmanager-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByQjFVSDBuM3VvdzZtbWZQ
[...]
            Dj602MJB1MakaWTnNzMoaEKtH9ATDif7cQ8cSERPqklrsN+Vxjiapg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-21T13:30:42Z"
    mac: ENC[AES256_GCM,data:itI1tKh24cG4GdO2nzZZqLRhYu+jDnLpF+8vu+hJhjPntOxJ3Lqo9aGt+OLRCdTrV16TFfpWz5rkoZHWwEj2BFPqSG06AwP6MKZDnVSP3Z8LrERuFl59EnlWwNazmYIsUSOJKLPQX6Twc+p7aR5mpFf9t1TGd5uYL32Xmrvflek=,iv:a8+T3jVQa12S6IUBZxaQvuqz895MWxS8iZdMphYgb74=,tag:43bX5t1UgygAiqszNPRJUw==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:19Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//cQMPtFSrqo9nLImp++VDQeVn2CtAHZ0kNrwCQs9Hhzbp
[...]
            =3d8p
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
