apps/infra/kube-prometheus-stack/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:OVP1GvELWPhZ8RnQWlJOWKp1zI9yXVGbgneVbcLlqnq1gQrTMg==,iv:avb/oMrSiPEVvB7PZNOrJL8dpKFJ/mNds89N7FCUhR0=,tag:UR9nAVzTSda8MntNeASP+A==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:r1FhI+pWqIpN53xPRQPBmTnfkCPOoUEKMGfCP6pHd2ENp6ZOOQ==,iv:1XRdH8LhcDy2P/f/S6b0f6Fy4pg/JeWrJz9LwWw1eCs=,tag:6FzBpPdynMuLMSlxyYTf9g==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:EqPj6vJkGfVkPJx2TKskkj0++LxHcPew797xrOA=,iv:HFzJBWwmQ3v4gxzs5hHEo8qjylIYUj9sM6SKXka26B4=,tag:S7rCLuqwptVxqWPi/LJuKA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: grafana-production
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:HqpGKgWUdmshBhhgLDgOL8mOBRPnnymZnboSaCgpP6tM/BH85hd9oX9YdDpx,iv:WtPPO398eIegDaRTbSnx0fvVCzrHzkZD1GR/YcBvRrU=,tag:02HDKiNdwtngpp21k0AjCA==,type:str]
          middlewares:
            - name: redirect-to-https
          #   - name: chain-traefik-dashboard
          #     namespace: traefik
          services:
            - kind: TraefikService
              name: kube-prometheus-stack-grafana
              namespace: monitoring
    tls:
        domains:
            - main: ENC[AES256_GCM,data:BZ6A7bcNVaWlFTXl7pTJdUZ0chhbf7OImMjymgc=,iv:WJmVWjENyMB1dF81gH0rklcmstZ/bO0jyJTY5AxpIYU=,tag:ISJvXAmlWNoeQuEc1KnBSA==,type:str]
              sans:
                - ENC[AES256_GCM,data:m/vK6O9rFwA2WSywUadLXx2Ka6RGPq8EtyaVz9re,iv:x7keEPknj6Q+1nodyv4jwwxgb1c9iE1eukRvLoxN8ek=,tag:Mdza6z23LMOYZDUjui2gGg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: grafana-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0MjlZa21rcCtzc3J3ejll
[...]
            hHjiRsf7hh5nNPxpoTYsnijQmYfnKFC87J8cfMYaD7MFyUUI/LDPAQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-04T23:16:36Z"
    mac: ENC[AES256_GCM,data:mKLjZFdJuqhTxHRhs4adU4LmO29/jhwkXcREnK3CilPGS1JyN2MsXGh6AsnWSix9I9kHGpzApyu9t2slKGfJZfU/GEs0/r0cct2anUS7bxXPK8KbwKjtbgRXGR2/iQ+fPGmVMp6H6PUltbODdVJddDwYNL9SAJ6FqgV9MBGdiUk=,iv:3H/yea+J4oLLLgSNpePovi77iac9ApPvpISvo+NXKOM=,tag:Fgj3N572irX1LaBBvhaXGw==,type:str]
    pgp:
        - created_at: "2024-10-03T23:39:55Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAktJmJhWijijuwU0KIZljNlz1YnCfdJRhEvgpvvoYt70W
[...]
            =yZiF
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:G4zIgqfNJ6hYWL62UMqHapez6EDo9y6n7h4mc6shrnAeuY+bOp5NBw==,iv:R1YUo380TZXQmv3DjBVHAvtfCmFtF8dTUHriEISroh0=,tag:qL4OTqAFbHWYNa3NDK36qQ==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:Mkeek7n+OnLKTj+QpybIt9l721vxALy4xTdsQtit0SzX8nIuqj4/eA==,iv:AeS7Nd69b81ZlZJWjTD7wUVeiH9/5Mb0HIXrcHYUCys=,tag:k54R0W+ESV8ApfjK/bh8eg==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:EqPj6vJkGfVkPJx2TKskkj0++LxHcPew797xrOA=,iv:HFzJBWwmQ3v4gxzs5hHEo8qjylIYUj9sM6SKXka26B4=,tag:S7rCLuqwptVxqWPi/LJuKA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: prometheus-production
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:2x+jjOzDzxYSvRE6Mza+RSPvghliH8sg1CaF1jtzfTKbMvMDDtkNujU1kUirK8SvRA1jCFVbrI5uBDl7GbaisLED4Ol1FZ1+2vRCAjNgVMN/D9PgNdJXt5x20z5ulgF/yTlpKGV1jjClQ9HDtdVpPcKJCQ/gFcVH1WYjQzYKLsI4AOjnx4yYmhHiAOdLxd5nq8SycA==,iv:/fIzuez+RnPMJH/JC3isxVd/kBJhegUy3LlvYE61HX4=,tag:+KqdTfX/+FjgxrIE7lz3KA==,type:str]
          priority: 10
          middlewares:
            - name: redirect-to-https
            - name: chain-authentik
              namespace: traefik
          services:
            - kind: TraefikService
              name: kube-prometheus-stack-prometheus
              namespace: monitoring
        - kind: Rule
          match: ENC[AES256_GCM,data:nD31/ae3UB5fruXmFO8bSMW5ctbqO08lmpYewqb/wauTd/1W9jG8wSrxknMJmCgsnWvr0B/BkvwhhuDIliYVu4GKJcI2/S+dTCDErtrKtIp7uAzevs/V7UWR,iv:YWJXYX96c3MKZQHcPbWyj3nI1CmRdmxreZRePJvKiSc=,tag:nQ6pxDnNqeNXxcHshsz2YA==,type:str]
          priority: 15
          services:
            - kind: Service
              name: ak-outpost-example-outpost
              port: 9000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:BZ6A7bcNVaWlFTXl7pTJdUZ0chhbf7OImMjymgc=,iv:WJmVWjENyMB1dF81gH0rklcmstZ/bO0jyJTY5AxpIYU=,tag:ISJvXAmlWNoeQuEc1KnBSA==,type:str]
              sans:
                - ENC[AES256_GCM,data:m/vK6O9rFwA2WSywUadLXx2Ka6RGPq8EtyaVz9re,iv:x7keEPknj6Q+1nodyv4jwwxgb1c9iE1eukRvLoxN8ek=,tag:Mdza6z23LMOYZDUjui2gGg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: prometheus-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0MjlZa21rcCtzc3J3ejll
[...]
            hHjiRsf7hh5nNPxpoTYsnijQmYfnKFC87J8cfMYaD7MFyUUI/LDPAQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-04T23:16:36Z"
    mac: ENC[AES256_GCM,data:mKLjZFdJuqhTxHRhs4adU4LmO29/jhwkXcREnK3CilPGS1JyN2MsXGh6AsnWSix9I9kHGpzApyu9t2slKGfJZfU/GEs0/r0cct2anUS7bxXPK8KbwKjtbgRXGR2/iQ+fPGmVMp6H6PUltbODdVJddDwYNL9SAJ6FqgV9MBGdiUk=,iv:3H/yea+J4oLLLgSNpePovi77iac9ApPvpISvo+NXKOM=,tag:Fgj3N572irX1LaBBvhaXGw==,type:str]
    pgp:
        - created_at: "2024-10-03T23:39:55Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAktJmJhWijijuwU0KIZljNlz1YnCfdJRhEvgpvvoYt70W
[...]
            =yZiF
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:slvQBMMdu4oPMcg6ajjmikjjrcQUawMIyIdF+SWOJqNBIjN6TMbuXiTZ,iv:mGZjXzHdVKc7/9OHNwAu02EJOGv69BDpUStp+mXVHWk=,tag:EzJiK73wAs5nbzmyqMqmSg==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:+BaMiqCJgU0XPuqlZkDVJNY5uvddUbexul/QPK2rFNOxEu+d5dd1PUQS,iv:o5eAY1EhbdkSXsmjuh/ngNATE9v7AXQ3ks/CURfNLsQ=,tag:dmcC57nGDvjbHQAd3XAB7g==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:EqPj6vJkGfVkPJx2TKskkj0++LxHcPew797xrOA=,iv:HFzJBWwmQ3v4gxzs5hHEo8qjylIYUj9sM6SKXka26B4=,tag:S7rCLuqwptVxqWPi/LJuKA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: alertmanager-production
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:9HzlTd0yExe5baT+b+uTi1R7ICvIDylVIH7zSL7CDW02fIX+C7u5mEovq3dssaFeAVqXShtqyaAKOkwZSUoEecCa+juYjaH7srmfAbYDZnWbY/T4ib1Camfn3l796bBR/G2Tfb/WxmZFSEO7yh384p4oFnAuA8tSbZKmuZvMb9DY71Q/4CYIn475cNgkpHODbjIUhn3u,iv:G8peHtK8uuoyvv8qgYtr4WvwjdlwsDchBmZDAyrr/SQ=,tag:kkT6UiooPeFMyoGTA5DgJA==,type:str]
          priority: 10
          middlewares:
            - name: redirect-to-https
            - name: chain-authentik
              namespace: traefik
          services:
            - kind: TraefikService
              name: kube-prometheus-stack-alertmanager
              namespace: monitoring
        - kind: Rule
          match: ENC[AES256_GCM,data:P8mrXMy98SH48jELdisVCAI6c47tjDrbfquTfXo335z93Y9zrt+TpxNpW6xlfz07OYm+XpDHBvAyLlBPY6RXfMTWstWPfS77+NdFaLYaBRzAyRfQCH1xESBGO5c=,iv:mz4UCTEY5vnZGBkOj3sq3k3UTfsuhqJVgxpmktMzvQc=,tag:/3jIpC/xJMQTxDp1hwWJaQ==,type:str]
          priority: 15
          services:
            - kind: Service
              name: ak-outpost-example-outpost
              port: 9000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:BZ6A7bcNVaWlFTXl7pTJdUZ0chhbf7OImMjymgc=,iv:WJmVWjENyMB1dF81gH0rklcmstZ/bO0jyJTY5AxpIYU=,tag:ISJvXAmlWNoeQuEc1KnBSA==,type:str]
              sans:
                - ENC[AES256_GCM,data:m/vK6O9rFwA2WSywUadLXx2Ka6RGPq8EtyaVz9re,iv:x7keEPknj6Q+1nodyv4jwwxgb1c9iE1eukRvLoxN8ek=,tag:Mdza6z23LMOYZDUjui2gGg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: alertmanager-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0MjlZa21rcCtzc3J3ejll
[...]
            hHjiRsf7hh5nNPxpoTYsnijQmYfnKFC87J8cfMYaD7MFyUUI/LDPAQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-04T23:16:36Z"
    mac: ENC[AES256_GCM,data:mKLjZFdJuqhTxHRhs4adU4LmO29/jhwkXcREnK3CilPGS1JyN2MsXGh6AsnWSix9I9kHGpzApyu9t2slKGfJZfU/GEs0/r0cct2anUS7bxXPK8KbwKjtbgRXGR2/iQ+fPGmVMp6H6PUltbODdVJddDwYNL9SAJ6FqgV9MBGdiUk=,iv:3H/yea+J4oLLLgSNpePovi77iac9ApPvpISvo+NXKOM=,tag:Fgj3N572irX1LaBBvhaXGw==,type:str]
    pgp:
        - created_at: "2024-10-03T23:39:55Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAktJmJhWijijuwU0KIZljNlz1YnCfdJRhEvgpvvoYt70W
[...]
            =yZiF
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
