apps/infra/kube-prometheus-stack/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: grafana.monitoring.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:34012ZSsYNIlSSvkyc4M703jp8qSjam6b2Wnuc931oikce+ytw==,iv:5hBQvoMlk199Z531MD0q/wYBLwzha0U3LJqNQl8aYdg=,tag:YJ8YmyTQs91wweMnGBbPcQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:vpVRxKLj3fXgL9F5HdwpIBfZweuGdFychUo5eWw=,iv:SmJSpQhnPzecRM3CXGNVGd4Ub+h4dY3Sr81pbE+4KbU=,tag:nrxHG7tO+iQL8bpOrIHZAg==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: grafana-staging
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:rtKukLWnr1vyJbrsCkyZt8i/pPlDRAyfP9oExruI7WdtmBt1RuYa7hj8+/Sd,iv:XcpVECWqNXjLm7gYj1mqFVxZEQe0UgraR6qUlvPDgEU=,tag:hGEfU7vOVOS5Ooqoiflhqw==,type:str]
          middlewares:
            - name: redirect-to-https
              namespace: traefik
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: kube-prometheus-stack-grafana
              namespace: monitoring
    tls:
        domains:
            - main: ENC[AES256_GCM,data:UQKgKztbAQAc5RZ4h3XrDgmKGVcvkBavqHSfSWg=,iv:TbqbzpLYFCR3JwP3cSzWEy/dXvmnSkdytWx5ZCwY8rU=,tag:tkX1OfZdmP5hhrSmC/yMrw==,type:str]
              sans:
                - ENC[AES256_GCM,data:ADnvZV3mQpRp/s4yL9pC5R6T0XZfMb8dW5TXd8AW,iv:/w87jnwmeEA9Xc0lWd4faxjiVAtjeCGGvWxaKpzEiBA=,tag:e/dxJgFdvoRR+XB6U87ECg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: grafana-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLcWtMTE8rZ3pRTGhHdWR0
[...]
            D8oRL53PXgrRoeTe2UYM16SUs3AqkumHUT7nxDam7PqyazSsQmAYKA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-05T15:56:22Z"
    mac: ENC[AES256_GCM,data:5dAZvJeVhWgg3z2dxtv9REEaW/ApZNRuXC5ubpBRKLVeWNTU/AacvGy4kLSISySjt4uw1RTSIAitVaZFhddYRSkcQ6to+HNCSLEehIkhpg8W9cdyMAPe1zuUK9xblLtaIW6gzpTAUz6DbbhGd4TZLi9cK7tdKlsXDywK2tNv80Y=,iv:1lv2iyGgzFahdXO4av9h/IINoW4YVYOs+KE1nL5mEIA=,tag:azHy1P6m49oZtuTy8Wpddg==,type:str]
    pgp:
        - created_at: "2024-10-02T21:15:31Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/9Hz3KCWNblSWY+l3tX0EpoSIE6qwuasn7VCa6Oj6V68B3
[...]
            =G5Mm
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: prometheus.monitoring.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:bQIXVNZhobus+eZXKHiA3qEF4sqXlC5KgEfrTdZkKifJJNpSdQ5t6g==,iv:fdH4yzdtPNZomZlxfGxNibOYeanTQ/F3I/VaQkoI0C4=,tag:ltNO3eL3JZq+IQdbIakEvQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:vpVRxKLj3fXgL9F5HdwpIBfZweuGdFychUo5eWw=,iv:SmJSpQhnPzecRM3CXGNVGd4Ub+h4dY3Sr81pbE+4KbU=,tag:nrxHG7tO+iQL8bpOrIHZAg==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: prometheus-staging
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:wKPwBG7mR0abHVamCtlbyHt+YnZ3I+9pNlDOaVsh0G2GJMAyLPBvfDT21eAnJXBT,iv:/2ZUbfyg8XhOWtx08ZYWB4uZobhDMw1R0PXS3ry3rSA=,tag:z6o6/4uX24yj/ICbBYMroA==,type:str]
          middlewares:
            - name: redirect-to-https
              namespace: traefik
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: kube-prometheus-stack-prometheus
              namespace: monitoring
    tls:
        domains:
            - main: ENC[AES256_GCM,data:UQKgKztbAQAc5RZ4h3XrDgmKGVcvkBavqHSfSWg=,iv:TbqbzpLYFCR3JwP3cSzWEy/dXvmnSkdytWx5ZCwY8rU=,tag:tkX1OfZdmP5hhrSmC/yMrw==,type:str]
              sans:
                - ENC[AES256_GCM,data:ADnvZV3mQpRp/s4yL9pC5R6T0XZfMb8dW5TXd8AW,iv:/w87jnwmeEA9Xc0lWd4faxjiVAtjeCGGvWxaKpzEiBA=,tag:e/dxJgFdvoRR+XB6U87ECg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: prometheus-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLcWtMTE8rZ3pRTGhHdWR0
[...]
            D8oRL53PXgrRoeTe2UYM16SUs3AqkumHUT7nxDam7PqyazSsQmAYKA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-05T15:56:22Z"
    mac: ENC[AES256_GCM,data:5dAZvJeVhWgg3z2dxtv9REEaW/ApZNRuXC5ubpBRKLVeWNTU/AacvGy4kLSISySjt4uw1RTSIAitVaZFhddYRSkcQ6to+HNCSLEehIkhpg8W9cdyMAPe1zuUK9xblLtaIW6gzpTAUz6DbbhGd4TZLi9cK7tdKlsXDywK2tNv80Y=,iv:1lv2iyGgzFahdXO4av9h/IINoW4YVYOs+KE1nL5mEIA=,tag:azHy1P6m49oZtuTy8Wpddg==,type:str]
    pgp:
        - created_at: "2024-10-02T21:15:31Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/9Hz3KCWNblSWY+l3tX0EpoSIE6qwuasn7VCa6Oj6V68B3
[...]
            =G5Mm
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: alertmanager.monitoring.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:ILRBKjW+Hr4Cjxkp0MjJq2eHpONAhGGsEPCLlnt61VRbfvNHKkjcCg6N,iv:MstHfd+UKonXGlI1Tlt6bn7BICHZ9ETsEp7i7xXTaEE=,tag:6ZTQy5jJJgKbIJc+gBiOZQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:vpVRxKLj3fXgL9F5HdwpIBfZweuGdFychUo5eWw=,iv:SmJSpQhnPzecRM3CXGNVGd4Ub+h4dY3Sr81pbE+4KbU=,tag:nrxHG7tO+iQL8bpOrIHZAg==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: alertmanager-staging
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:9Vkypr0PjfIVkA4Qog6l5Var9VsxJkPDbe+KeId9j03SedXD3iyNjlC0YVocmNEQoqI=,iv:P3BhzlfpvX2VYaJEdguCDebSCBIp4UA2IM+JlBdKqc0=,tag:a9j2sTx/cO/xDJOHjXhEAQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: kube-prometheus-stack-alertmanager
              namespace: monitoring
    tls:
        domains:
            - main: ENC[AES256_GCM,data:UQKgKztbAQAc5RZ4h3XrDgmKGVcvkBavqHSfSWg=,iv:TbqbzpLYFCR3JwP3cSzWEy/dXvmnSkdytWx5ZCwY8rU=,tag:tkX1OfZdmP5hhrSmC/yMrw==,type:str]
              sans:
                - ENC[AES256_GCM,data:ADnvZV3mQpRp/s4yL9pC5R6T0XZfMb8dW5TXd8AW,iv:/w87jnwmeEA9Xc0lWd4faxjiVAtjeCGGvWxaKpzEiBA=,tag:e/dxJgFdvoRR+XB6U87ECg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: alertmanager-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLcWtMTE8rZ3pRTGhHdWR0
[...]
            D8oRL53PXgrRoeTe2UYM16SUs3AqkumHUT7nxDam7PqyazSsQmAYKA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-05T15:56:22Z"
    mac: ENC[AES256_GCM,data:5dAZvJeVhWgg3z2dxtv9REEaW/ApZNRuXC5ubpBRKLVeWNTU/AacvGy4kLSISySjt4uw1RTSIAitVaZFhddYRSkcQ6to+HNCSLEehIkhpg8W9cdyMAPe1zuUK9xblLtaIW6gzpTAUz6DbbhGd4TZLi9cK7tdKlsXDywK2tNv80Y=,iv:1lv2iyGgzFahdXO4av9h/IINoW4YVYOs+KE1nL5mEIA=,tag:azHy1P6m49oZtuTy8Wpddg==,type:str]
    pgp:
        - created_at: "2024-10-02T21:15:31Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/9Hz3KCWNblSWY+l3tX0EpoSIE6qwuasn7VCa6Oj6V68B3
[...]
            =G5Mm
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
